# feader-c-lib

./: .gitignore  CMakeLists.txt  Makefile  README.md  configure
src/: feader.c  feader.h  schema.sql
tests/data/: android-authority.xml  android-central.xml  donnfelker.xml  github.xml  upwork.xml  wbrawner.xml
tools/: amalgamate.py
